# SkillPointTimetableAssistant

./: .gitignore  CMakeLists.txt  README.md  constants.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
model/: lesson.cpp  lesson.h  student.cpp  student.h  timetablemanager.cpp  timetablemanager.h
view/: daytimetableinfo.cpp  daytimetableinfo.h  lessoneditpopup.cpp  lessoneditpopup.h  lessoneditpopup.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  partilist.cpp  partilist.h  studentinfo.cpp  studentinfo.h  studentinfo.ui  studentslist.cpp  studentslist.h  studentslist.ui  timetablewidget.cpp  timetablewidget.h
